css/custom.css
body {
    font-family:'Avenir LT W01_35 Light1475496';
    font-size: 17px;
}

p {
    color: #5B666D;
}

h1 {
    font-family: 'Avenir LT W01_65 Medium1475532';
    font-weight: 900;
    font-size: 2.5em;
}

h2 {
    font-family: 'Avenir LT W01_65 Medium1475532';
    font-weight: 800;
    font-size: 2.25em;
}

h3 {
    font-family: 'Avenir LT W01_65 Medium1475532';
    font-weight: 700;
}

h4 {
    font-family: 'Avenir LT W01_65 Medium1475532';
}

.navbar-static-top {
    z-index: 1000;
}

.icon-bar {
    background-color: #fff;
}

.navbar-dark {
    padding-top: 15px;
}

.navbar-dark .navbar-nav>li>a {
    font-size: 16px;
    font-weight: 500;
    color: #fff;
}

.navbar-dark .navbar-nav>li>a:hover {
    background: transparent;
}

.navbar-dark .navbar-brand {
    background-image: url(../img/white_logo_transparent_background.png);
}

.navbar-brand {
    float: left;
    background-repeat: no-repeat;
    background-position: 50% 50%;
    height: 50px;
    padding: 15px 15px 15px 15px;
    line-height: 20px;
    background-size: auto 50px;
    width: 260px;
}

.navbar {
    position: relative;
    background: transparent;
    min-height: 50px;
}

.radial-header-gradient {
    background-color: #3B2F63;
    background-image: -webkit-radial-gradient(50% top, rgba(84, 90, 182, 0.6) 0%, rgba(84, 90, 182, 0) 75%), -webkit-radial-gradient(right top, #794aa2 0%, rgba(121, 74, 162, 0) 57%);
    background-image: radial-gradient(0% bottom, ellipse, rgba(118, 72, 160, 0.7) 0%, rgba(118, 72, 160, 0) 60%), radial-gradient(90% bottom, ellipse,  #523f8c 0%, rgba(82, 63, 140, 0) 40%);
    background-repeat: no-repeat;
    color: #c7c0de;
}

.small-header {
    min-height: 100vh;
}

.headliner {
    position: absolute;
    width: 100%;
    padding-top: 9vh;
}

.headliner h1 {
    color: #ffffff;
}

.headliner h4 {
    padding: 15px;
    color: #fff;
}

.headliner a:link, .headliner a:visited {
    color: white;
    border: 1px solid white;
    border-radius: 0px;
}

.headliner a:hover {
    background-color: white;
    color: mediumpurple;
}

#learn-more {
    position: absolute;
    bottom: 0%;
    width: 100%;
}

#services {
    margin-top: 10px;
    padding-top: 15px; 
}

#services-container {
    padding-top: 20px;
    padding-bottom: 60px;
}

.services-icon {
    margin: 0px 0px 30px 0px;
}

.col-wrap h4 {
    margin-top: 30px;
}

.col-wrap {
    background-color: #ffffff;
    -webkit-box-shadow: 0px 0px 1px 1px #dedee0;
    -mox-box-shadow: 0px 0px 1px 1px #dedee0;
    box-shadow: 0px 0px 1px 1px #dedee0;
    padding-top: 40px;
    padding-bottom: 40px;
    width: 100%;
    height: 100%;
}

.fa-thumbs-o-up {
    color: #3b5998;
}

.fa-money {
    color: #009d4f;
}

.fa-cogs {
    color: indianred;
}

.fa-line-chart {
    color: #8a2be2;
}

.fa-cubes {
    color: #daa520;
}

#our-process {
    margin-top: 10px;
    padding-top: 15px;
}

#our-process p {
    margin-top: 15px;
}

.separator {
    width: 100px;
    border-bottom: 2px solid #e8ebef;
}

.process-img {
    padding-top: 25px;
    padding-bottom: 30px;
}

.section-gray {
    background-color: #f7f8fa;
}

.about-our-services h4 {
    margin-top: 25px;
}

.about-services i {
    font-size: 175px;
}

.more-services {
   margin-top: 40px;
}

.more-services-wrapper {
    display: flex;
    flex-direction: row;
    align-items: center;
    margin: 0px 0px 60px 0px;
    padding: 35px 0 35px 0px;
    background-color: #ffffff;
    -webkit-box-shadow: 0px 0px 1px 1px #dedee0;
    -mox-box-shadow: 0px 0px 1px 1px #dedee0;
    box-shadow: 0px 0px 1px 1px #dedee0;
}

.copy-txt-r p {
    text-align: justify;
}

.copy-txt-r p, .copy-txt-r h3 {
    margin-right: 35px;
}

.copy-txt-l p {
    text-align: justify;
}

.copy-txt-l p, .copy-txt-l h3 {
    margin-left: 35px;
}

.work-with-us {
    margin-top: 10px;
    padding-top: 15px;
    padding-bottom: 15px;
}

.work-with-us p {
    margin-top: 15px;
}

.cta-button {
    margin-top: 10px;
    margin-bottom: 10px;
}

.work-with-us a:link, .work-with-us a:visited {
    color: mediumpurple;
    border: 1px solid mediumpurple;
    border-radius: 0px;
    width: 275px;
}

.work-with-us a:hover, .work-with-us a:active {
    background-color: mediumpurple;
    color: white;
}

.cta-button-a {
    width: 100%;
}

footer {
    height: 50px;
}

.footer-links {
    margin-top: 15px;
}

.footer-links a {
    padding-left: 10px;
    padding-right: 10px;
    color: #5B666D;
}

@media only screen and (max-width: 768px) {
    .navbar-collapse .navbar-nav>li>a:link {
        z-index: 1001;
        background-color: white;
        color: mediumpurple;
        font-weight: 900;
        opacity: .95;
        border: 2px solid white;
    }
    
    .navbar-collapse .navbar-nav>li>a:visited {
        z-index: 1001;
        background-color: white;
        color: mediumpurple;
        font-weight: 900;
        opacity: .95;
        border: 2px solid white;
    }
    
    .more-services-wrapper {
        flex-direction: column;
        padding: 25px 0 10px 0px;
    }
    
    .more-services h3 {
        margin-top: 25px;
        margin-bottom: 15px;
        text-align: center;
    }
    
    .about-services i {
        font-size: 95px;
    }
    
    .copy-txt-r p, .copy-txt-r h3 {
        margin-right: 0px;
    }

    .copy-txt-l p, .copy-txt-l h3 {
        margin-left: 0px;
    }

}

